# mip

./: .gitignore  .tmp  README.md  example.py  main.py  netflow.py  planes.py  pyproject.toml  run.py  ✈.py  🛦.py
docs/source/: conf.py  index.rst
docs/source/_templates/: custom-class.rst
scheduler/: constants.py  model.py
src/tails/: model.py
tails/: gurobi_typing.py  model.py
tests/: test_model.py
tests/integration/: test_model.py
