[tool.poetry]
name = "tails"
version = "0.1.0"
description = "Schedule plane maintance"
authors = ["Huub Hoofs <huubhoofs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gurobipy = "11.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
mypy = "^1.3.0"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
